[gd_scene load_steps=3 format=3 uid="uid://bgc761tvvpkuq"]

[ext_resource type="Script" uid="uid://bicwqsiip7o7j" path="res://scripts/deck_pile.gd" id="1_deck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deck"]
bg_color = Color(0.12, 0.14, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.4, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DeckPile" type="Panel"]
custom_minimum_size = Vector2(110, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_deck")
script = ExtResource("1_deck")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 4.0
offset_right = 40.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "DECK"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "(10)"
horizontal_alignment = 1

[node name="CardBack" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.25, 0.35, 1)

[node name="BackPattern" type="Label" parent="CardBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_right = 30.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.35, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "[CC]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyIndicator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.5, 0.3, 0.3)

[node name="CooldownBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 26.0
offset_right = -8.0
offset_bottom = 38.0
grow_horizontal = 2
max_value = 10.0
value = 5.0
show_percentage = false
